test/files/neg/t9093.check
t9093.scala:3: error: polymorphic expression cannot be instantiated to expected type;
 found   : [C](f: C)Null
 required: Unit
  val x: Unit = apply2(0)/*(0)*/
                      ^
one error found
